@@ -1,76 +1,235 @@
+
+@article{bauer1998testing,
+  title={{Testing strategies in multi-dose experiments including active control}},
+  author={Bauer, P. and R{\\"o}hmel, J. and Maurer, W. and Hothorn, L.},
+  journal={Statistics in Medicine},
+  volume={17},
+  number={18},
+  pages={2133--2146},
+  issn={1097-0258},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+@article{bauer2001multiple,
+	author = {Bauer, P. and Brannath, W. and Posch, M.},
+	title = {{Multiple testing for identifying effective and safe treatments}},
+	journal = {Biometrical journal},
+	year = {2001},
+	volume = {43},
+	number = {5},
+	pages = {605--616},
+	issn = {1521-4036},
+	publisher = {Wiley Online Library}
+}
+
+@article{bretz2003identifying,
+	author = {Bretz, F. and Hothorn, L.A. and Hsu, J.C.},
+	title = {{Identifying effective and/or safe doses by stepwise confidence intervals for ratios}},
+	journal = {Statistics in medicine},
+	year = {2003},
+	volume = {22},
+	number = {6},
+	pages = {847--858},
+	issn = {1097-0258},
+	publisher = {Wiley Online Library}
+}
+
 @article{bretzEtAl2009graphical,
-  title={{A graphical approach to sequentially rejective multiple test procedures}},
-  author={Bretz, {F.} and Maurer, {W.} and Brannath, {W.} and Posch, {M.}},
-  journal={Statistics in medicine},
-  volume={28},
-  number={4},
-  pages={586--604},
-  year={2009},
-  publisher={John Wiley \& Sons},
-  url = {www.meduniwien.ac.at/fwf_adaptive/papers/bretz_2009_22.pdf}
+	author = {Bretz, {F.} and Maurer, {W.} and Brannath, {W.} and Posch, {M.}},
+	title = {{A graphical approach to sequentially rejective multiple test procedures}},
+	journal = {Statistics in medicine},
+	year = {2009},
+	volume = {28},
+	number = {4},
+	pages = {586--604},
+	url = {www.meduniwien.ac.at/fwf_adaptive/papers/bretz_2009_22.pdf},
+	publisher = {John Wiley \& Sons}
 }
 
 @article{bretzEtAl2009power,
-  title={{Test and power considerations for multiple endpoint analyses using sequentially rejective graphical procedures}},
-  author={Bretz, {F.} and Maurer, {W.} and Hommel, {G.} },
-  journal={Statistics in medicine},
-  year={2010 (in press)},
-  publisher={John Wiley \& Sons}
+	author = {Bretz, {F.} and Maurer, {W.} and Hommel, {G.}},
+	title = {{Test and power considerations for multiple endpoint analyses using sequentially rejective graphical procedures}},
+	journal = {Statistics in medicine},
+	year = {2010 (in press)},
+	publisher = {John Wiley \& Sons}
 }
 
-@Manual{graph,
-    title = {graph: A package to handle graph data structures},
-    author = { {R.} Gentleman and {E.} Whalen and {W.} Huber and {S.} Falcon},
-    year = {2010},
-    note = {R package version 1.26.0},
-    url = {http://CRAN.R-project.org/package=graph},
-  }
-  
-@Manual{TikZ,
-    title = {The Tik Z and PGF Packages Manual for version 2.00},
-    author = {Till Tantau},
-    year = {2008},
-    url = {http://www.ctan.org/tex-archive/graphics/pgf/base/doc/generic/pgf/pgfmanual.pdf},
-  }
+@article{Bretz11,
+	author = {Bretz, {F.} and Posch, {M.} and Glimm, {E.} and Klinglmueller, {F.} and Maurer, {W.} and Rohmeyer, {K.}},
+	title = {Graphical approaches for multiple comparison problems using weighted Bonferroni, Simes or parametric tests},
+	journal = {Biometrical Journal},
+	year = 2011,
+	pages = {to appear},
 
-@Manual{xcolor,
-    title = {Extending LaTeX's color facilities: the xcolor package},
-    author = {Uwe Kern},
-    year = {2007},
-    publisher={CTAN},
-    url = {http://www.ctan.org/tex-archive/macros/latex/contrib/xcolor/}
-  }
-
-@Manual{Rgraphviz,
-    title = {Rgraphviz: Provides plotting capabilities for R graph objects},
-    author = {Jeff Gentry and {Li} Long and Robert Gentleman and Seth Falcon and Florian Hahne and Deepayan Sarkar and Kasper Hansen},
-    year = {2010},
-    note = {R package version 1.26.0},
-    url = {http://www.bioconductor.org/packages/2.6/bioc/html/Rgraphviz.html}
-  }
-
-@Article{ Hommel07,
-	Author = {{G.} Hommel and {F.} Bretz and {W.} Maurer},
-	Title = {Powerful short-cuts for multiple testing procedures with special reference to gatekeeping strategies},
-	Journal = {Statistics in Medicine},
-	Volume = {26},
-	Pages = {4063--4073},
-	year = 2007
 }
 
-@Article{ Bretz11,
-    Author = {{F.} Bretz and {M.} Posch and {E.} Glimm and {F.} Klinglmueller and {W.} Maurer and {K.} Rohmeyer},
-    Title = {Graphical approaches for multiple comparison problems using weighted Bonferroni, Simes or parametric tests},
-    Journal = {Biometrical Journal},
-    Pages = {to appear},
-    Year = 2011 
+@article{burman2009recycling,
+	author = {Burman, C.F. and Sonesson, C. and Guilbaud, O.},
+	title = {{A recycling framework for the construction of Bonferroni-based multiple tests}},
+	journal = {Statistics in medicine},
+	year = {2009},
+	volume = {28},
+	number = {5},
+	pages = {739--761},
+	issn = {1097-0258},
+	publisher = {Wiley Online Library}
 }
 
-@Article{ Holm79,
-    Author= {{S.} Holm},
-    Year = {1979},
-    Title = {A simple sequentially rejective multiple test procedure.},
-    Journal = {Scand. J. Statist.},
-    Volume = {6},
-    Pages = {65--70}
+@article{dmitrienko2003gatekeeping,
+	author = {Dmitrienko, A. and Offen, W.W. and Westfall, P.H.},
+	title = {{Gatekeeping strategies for clinical trials that do not require all primary effects to be significant}},
+	journal = {Statistics in Medicine},
+	year = {2003},
+	volume = {22},
+	number = {15},
+	pages = {2387--2400},
+	issn = {1097-0258},
+	publisher = {Wiley Online Library}
+}
+
+@article{dmitrienko2008general,
+	author = {Dmitrienko, A. and Tamhane, A.C. and Wiens, B.L.},
+	title = {{General multistage gatekeeping procedures}},
+	journal = {Biometrical Journal},
+	year = {2008},
+	volume = {50},
+	number = {5},
+	pages = {667--677},
+	issn = {1521-4036},
+	publisher = {Wiley Online Library}
+}
+
+@manual{graph,
+	title = {graph: A package to handle graph data structures},
+	author = {Gentleman, {R.} and Whalen, {E.} and Huber, {W.} and Falcon, {S.}},
+	year = {2010},
+	note = {R package version 1.26.0},
+	url = {http://CRAN.R-project.org/package=graph},
+
+}
+
+@manual{Rgraphviz,
+	title = {Rgraphviz: Provides plotting capabilities for R graph objects},
+	author = {Gentry, J. and Long, L. and Gentleman, R. and Falcon, S. and Hahne, F. and Sarkar, D. and Hansen, K.},
+	year = {2010},
+	note = {R package version 1.26.0},
+	url = {http://www.bioconductor.org/packages/2.6/bioc/html/Rgraphviz.html},
+
+}
+
+@article{glimm2010hierarchical,
+	author = {Glimm, E. and Maurer, W. and Bretz, F.},
+	title = {{Hierarchical testing of multiple endpoints in group-sequential trials}},
+	journal = {Statistics in medicine},
+	year = {2010},
+	volume = {29},
+	number = {2},
+	pages = {219--228},
+	issn = {1097-0258},
+	publisher = {Wiley Online Library}
+}
+
+@article{guilbaud2008simultaneous,
+	author = {Guilbaud, O.},
+	title = {{Simultaneous Confidence Regions Corresponding to Holm's Step-Down Procedure and Other Closed-Testing Procedures}},
+	journal = {Biometrical Journal},
+	year = {2008},
+	volume = {50},
+	number = {5},
+	pages = {678--692},
+	issn = {1521-4036},
+	publisher = {Wiley Online Library}
+}
+
+@article{Holm79,
+	author = {Holm, {S.}},
+	title = {A simple sequentially rejective multiple test procedure.},
+	journal = {Scand. J. Statist.},
+	year = {1979},
+	volume = {6},
+	pages = {65--70},
+
+}
+
+@article{hommel2008aesthetics,
+	author = {Hommel, G. and Bretz, F.},
+	title = {{Aesthetics and Power Considerations in Multiple Testing--A Contradiction?}},
+	journal = {Biometrical Journal},
+	year = {2008},
+	volume = {50},
+	number = {5},
+	pages = {657--666},
+	issn = {1521-4036},
+	publisher = {Wiley Online Library}
+}
+
+@article{Hommel07,
+	author = {Hommel, {G.} and Bretz, {F.} and Maurer, {W.}},
+	title = {Powerful short-cuts for multiple testing procedures with special reference to gatekeeping strategies},
+	journal = {Statistics in Medicine},
+	year = 2007,
+	volume = {26},
+	pages = {4063--4073},
+
+}
+
+@article{hung2010challenges,
+	author = {Hung, H.M.J. and Wang, S.-J.},
+	title = {{Challenges to multiple testing in clinical trials.}},
+	journal = {Biometrical journal. Biometrische Zeitschrift},
+	year = {2010},
+	issn = {1521-4036}
+}
+
+@manual{xcolor,
+	title = {Extending LaTeX's color facilities: the xcolor package},
+	author = {Kern, U.},
+	year = {2007},
+	url = {http://www.ctan.org/tex-archive/macros/latex/contrib/xcolor/},
+	publisher = {CTAN}
+}
+
+@article{strassburger2008compatible,
+	author = {Strassburger, K. and Bretz, F.},
+	title = {{Compatible simultaneous lower confidence bounds for the Holm procedure and other Bonferroni-based closed tests}},
+	journal = {Statistics in medicine},
+	year = {2008},
+	volume = {27},
+	number = {24},
+	pages = {4914--4927},
+	issn = {1097-0258},
+	publisher = {Wiley Online Library}
+}
+
+@manual{TikZ,
+	title = {The Tik Z and PGF Packages Manual for version 2.00},
+	author = {Tantau, T.},
+	year = {2008},
+	url = {http://www.ctan.org/tex-archive/graphics/pgf/base/doc/generic/pgf/pgfmanual.pdf},
+
+}
+
+@article{westfall2001optimally,
+  title={{Optimally weighted, fixed sequence and gatekeeper multiple testing procedures}},
+  author={Westfall, P.H. and Krishen, A.},
+  journal={Journal of Statistical Planning and Inference},
+  volume={99},
+  number={1},
+  pages={25--40},
+  issn={0378-3758},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{wiens2003fixed,
+  title={{A fixed sequence Bonferroni procedure for testing multiple endpoints}},
+  author={Wiens, B.L.},
+  journal={Pharmaceutical Statistics},
+  volume={2},
+  number={3},
+  pages={211--215},
+  issn={1539-1612},
+  year={2003},
+  publisher={Wiley Online Library}
 }
